attribute name updates and use get_my_service_info for source related information
