# anchore_engine/services/catalog/api/controllers/default_controller.py
@@ -221,9 +221,16 @@ def subscriptions_subscriptionId_delete(subscriptionId):
 
 # eventlog calls
 # @api.route('/events', methods=['GET', 'POST', 'DELETE'])
-def events_get(source_service=None, source_host_id=None, resource_type=None, level=None, since=None, before=None, next=None):
+def events_get(source_servicename=None, source_hostid=None, resource_type=None, level=None, since=None, before=None, next=None):
     try:
-        request_inputs = anchore_engine.services.common.do_request_prep(connexion.request, default_params={})
+        request_inputs = anchore_engine.services.common.do_request_prep(connexion.request,
+                                                                        default_params={'source_servicename': source_servicename,
+                                                                                        'source_hostid': source_hostid,
+                                                                                        'resource_type': resource_type,
+                                                                                        'level': level,
+                                                                                        'since': since,
+                                                                                        'before': before,
+                                                                                        'next': next})
         with db.session_scope() as session:
             return_object, httpcode = anchore_engine.services.catalog.catalog_impl.events(session, request_inputs)
 
@@ -247,9 +254,9 @@ def events_post(bodycontent):
     return (return_object, httpcode)
 
 
-def events_delete():
+def events_delete(since=None, before=None):
     try:
-        request_inputs = anchore_engine.services.common.do_request_prep(connexion.request, default_params={})
+        request_inputs = anchore_engine.services.common.do_request_prep(connexion.request, default_params={'since': since, 'before': before})
         with db.session_scope() as session:
             return_object, httpcode = anchore_engine.services.catalog.catalog_impl.events(session, request_inputs)
 
